# wallet-service

./: .env.example  README.md  debug_test.py  pyproject.toml  test_db_connection.py
app/: config.py  main.py
app/api/: api_keys.py  auth.py  wallet.py
app/middleware/: correlation.py
app/models/: __init__.py  api_key.py  transaction.py  user.py  wallet.py
app/schemas/: __init__.py  api_key.py  auth.py  transaction.py  wallet.py
app/services/: __init__.py  api_key.py  auth.py  transaction.py  user.py  wallet.py  webhook.py
app/utils/: logger.py  rate_limit.py  responses.py
tests/: test_main.py
